Major improvements including: -Added FlyWay for automating database change management -Added interfaces around services -Renamed the PaymentsTransaction entity to a simpler Payments