@@ -5,7 +5,6 @@ import io.quarkus.hibernate.orm.panache.PanacheRepository;
 import jakarta.enterprise.context.ApplicationScoped;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class LineItemsRepository implements PanacheRepository<LineItem> {
@@ -14,7 +13,7 @@ public class LineItemsRepository implements PanacheRepository<LineItem> {
         return  items
                 .stream()
                 .map(lineItem -> getEntityManager().merge(lineItem))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
